--- a/Assignment3/report/report.tex
+++ b/Assignment3/report/report.tex
@@ -42,5 +42,15 @@
 \newpage
 
 \section{Introdução}
+A quantidade de informação existente atualmente torna cada vez mais importante a existência de mecanismos que permitam processar
+esta informação e, subsequentemente, procurar por documentos com base em termos. Esta pesquisa deve no entanto, ter em conta a
+importância dos termos utilizados no texto, favorecendo nomes a determinantes, sendo útil o uso de algoritmos como TF-IDF que 
+têm em conta a frequência de um dado termo no conjunto de documentos. 
+A presente ferramenta recorre a estes mecanismos para indexar um conjunto de documentos e permitir ao utilizador realizar pesquisas
+nos mesmos.
+
+\section{RSS Spider}
+\subsection{algortimo de pesquisa : TF-IDF}
+
 
 \end{document}
