Query results are now displayed on the GUI

--- a/Assignment3/report/report.tex
+++ b/Assignment3/report/report.tex
@@ -50,6 +50,9 @@ A presente ferramenta recorre a estes mecanismos para indexar um conjunto de doc
 nos mesmos.
 
 \section{RSS Spider}
+A aplicação desenvolvida apresenta dois modos de funcionamento, o primeiro que consiste em atualizar a base de dados de documentos 
+indexados
+\subsection{Processamento de documentos}
 \subsection{algortimo de pesquisa : TF-IDF}
 
 
